--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-opencv-contrib-python-headless>=4.8.0
-pillow
-numpy
-mediapipe>=0.10.14
-scipy
+dlib==19.24.2
+numpy==1.26.4
+opencv_python_headless==4.9.0.80
+Pillow==10.2.0
+Requests==2.31.0
+streamlit==1.31.1
+streamlit_cropper==0.2.2
