--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 dlib==19.24.2
 numpy==1.26.4
-opencv_python_headless==4.9.0.80
+opencv-python-headless==4.9.0.80
 Pillow==10.2.0
-Requests==2.31.0
+requests==2.31.0
 streamlit==1.31.1
-streamlit_cropper==0.2.2
+streamlit-cropper==0.2.1
