--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-dlib==19.24.2
+streamlit==1.39.0
+opencv-python-headless==4.10.0.84
+face-recognition==1.3.0
 numpy==1.26.4
-opencv-python-headless==4.9.0.80
-Pillow==10.2.0
-requests==2.31.0
-streamlit==1.31.1
+Pillow==10.4.0
