--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.39.0
-opencv-python-headless==4.10.0.84
-face-recognition==1.3.0
-numpy==1.26.4
-Pillow==10.4.0
+streamlit
+opencv-python
+dlib
+numpy
+pillow
